--- a/rootdir/init.target.rc
+++ b/rootdir/init.target.rc
@@ -1,4 +1,5 @@
 on init
+    export LD_SHIM_LIBS /system/lib/libsec-ril.so|libsamsung_symbols.so
 # ko files for FM Radio
     insmod /system/lib/modules/Si4709_driver.ko
 
@@ -12,38 +13,50 @@ on post-fs-data
     chmod 0644 /dev/icdr
     chown system system /dev/tzic
 
-
 # make param block device link for SysScope
     symlink /dev/block/mmcblk0p4 /dev/block/param
 
 # Restorecon
-    restorecon /efs/nv_data.bin
-    restorecon /efs/nv_data.bin.md5
-    restorecon /efs/.nv_core.bak
-    restorecon /efs/.nv_core.bak.md5
-    restorecon /efs/.nv_data.bak
-    restorecon /efs/.nv_data.bak.md5
-    restorecon /efs/.nv_state
-    restorecon /efs/bluetooth/bt_addr
-    restorecon /efs/FactoryApp/factorymode
-    restorecon /efs/FactoryApp/hw_ver
-    restorecon /efs/FactoryApp/keystr
-    restorecon /efs/FactoryApp/serial_no
-    restorecon /efs/imei/mps_code.dat
-    restorecon /efs/gyro_cal_data
-    restorecon /efs/wifi/.mac.info
+    restorecon_recursive /efs
+
+# GPS init
+    mkdir /data/gps
+    chown gps system /data/gps
+    chmod 1770 /data/gps
+    write /sys/class/sec/gps/GPS_PWR_EN/export 162
+    write /sys/class/sec/gps/GPS_PWR_EN/value 0
+    write /sys/class/sec/gps/GPS_PWR_EN/direction out
+    chown gps system /sys/class/sec/gps/GPS_PWR_EN/value
+    chmod 0664 /sys/class/sec/gps/GPS_PWR_EN/value
+    chown gps system /dev/ttySAC1
+    chmod 0660 /dev/ttySAC1
+    restorecon /sys/class/sec/gps/export
+    restorecon /sys/class/sec/gps/GPS_PWR_EN/value
+    restorecon /sys/class/sec/gps/GPS_PWR_EN/direction
+
+    write /data/.cid.info 0
+    restorecon /data/.cid.info
+    restorecon /data/ISP_CV
+
+on fs
+    # zram
+    swapon_all /fstab.smdk4x12
 
 on boot
-
 # cbd
 service cpboot-daemon /sbin/cbd -d
     class main
     user root
     group radio cache inet misc audio sdcard_rw log
+    seclabel u:r:cpboot-daemon:s0
 
-# GPS
-service gpsd /system/bin/gpsd -c /system/etc/gps.xml
+
+# Start GPS daemon
+service gps-daemon /system/bin/sh /system/bin/gps_daemon.sh
     class main
     socket gps seqpacket 0660 gps system
     user gps
-    group system inet sdcard_rw
+    group system inet sdcard_rw gps
+    seclabel u:r:glgps:s0
+
+
