--- a/rootdir/init.target.rc
+++ b/rootdir/init.target.rc
@@ -50,3 +50,4 @@ service gpsd /system/bin/gpsd -c /system/etc/gps.xml
     socket gps seqpacket 0660 gps system
     user gps
     group system inet sdcard_rw
+    seclabel u:r:gpsd:s0
