--- a/rootdir/init.target.rc
+++ b/rootdir/init.target.rc
@@ -1,5 +1,6 @@
 on init
 
+    export LD_PRELOAD  "/system/lib/libgps.so"
     export LD_SHIM_LIBS /system/lib/libsec-ril.so|libril_shim.so
 
 # ko files for FM Radio
