i9300: gps: build and load libgpsd-compat for gpsd binary
Change-Id: I587f7344a41c5dada30b21d2dc1caeddde0d00e3

--- a/rootdir/init.target.rc
+++ b/rootdir/init.target.rc
@@ -1,6 +1,6 @@
 on init
 
-    export LD_SHIM_LIBS /system/lib/libsec-ril.so|libril_shim.so
+    export LD_SHIM_LIBS /system/lib/libsec-ril.so|libril_shim.so:/system/bin/gpsd|libgpsd-compat.so
 
 # ko files for FM Radio
     insmod /system/lib/modules/Si4709_driver.ko
