--- a/rootdir/init.target.rc
+++ b/rootdir/init.target.rc
@@ -1,6 +1,6 @@
 on init
 
-    export LD_PRELOAD  "/system/lib/libgpsd-compat.so"
+    export LD_PRELOAD  "/system/lib/libgpsd-compat.so /system/lib/libwvm-compat.so"
     export LD_SHIM_LIBS /system/lib/libsec-ril.so|libril_shim.so
 
 # ko files for FM Radio
