--- a/rootdir/init.target.rc
+++ b/rootdir/init.target.rc
@@ -43,9 +43,9 @@ service cpboot-daemon /sbin/cbd -d
     user root
     group radio cache inet misc audio sdcard_rw log
 
-service gpsd /system/bin/gpsd -c /system/etc/gps.xml
+service gpsd /system/bin/sh gps_daemon.sh
     class late_start
     socket gps seqpacket 0660 gps system
     user gps
-    group system inet sdcard_rw
+    group system inet sdcard_rw gps
     seclabel u:r:gpsd:s0
