--- a/rootdir/init.target.rc
+++ b/rootdir/init.target.rc
@@ -45,9 +45,9 @@ service cpboot-daemon /sbin/cbd -d
     group radio cache inet misc audio sdcard_rw log
 
 # GPS
-service gpsd /system/bin/gpsd -c /system/etc/gps.xml
+service gpsd gps_daemon.sh
     class main
     socket gps seqpacket 0660 gps system
     user gps
     group system inet sdcard_rw
-    seclabel u:r:gpsd:s0
+    seclabel u:r:glgps:s0
