--- a/rootdir/init.target.rc
+++ b/rootdir/init.target.rc
@@ -47,5 +47,5 @@ service gpsd /system/bin/gpsd -c /system/etc/gps.xml
     class late_start
     socket gps seqpacket 0660 gps system
     user gps
-    group system inet sdcard_rw
+    group system inet sdcard_rw gps
     seclabel u:r:gpsd:s0
