--- a/rootdir/init.target.rc
+++ b/rootdir/init.target.rc
@@ -1,12 +1,14 @@
 on init
-
     export LD_SHIM_LIBS /system/lib/libsec-ril.so|libril_shim.so:/system/bin/gpsd|libgpsd-compat.so
 
-# ko files for FM Radio
+    # ko files for FM Radio
     insmod /system/lib/modules/Si4709_driver.ko
 
+on post-fs
+    setprop ro.config.zram true
+
 on post-fs-data
-# icd
+    # icd
     exec icd_check
     chown system system /dev/icd
     chmod 0644 /dev/icd
@@ -16,10 +18,10 @@ on post-fs-data
     chown system system /dev/tzic
 
 
-# make param block device link for SysScope
+    # make param block device link for SysScope
     symlink /dev/block/mmcblk0p4 /dev/block/param
 
-# Restorecon
+    # Restorecon
     restorecon /efs/nv_data.bin
     restorecon /efs/nv_data.bin.md5
     restorecon /efs/.nv_core.bak
@@ -36,15 +38,11 @@ on post-fs-data
     restorecon /efs/gyro_cal_data
     restorecon /efs/wifi/.mac.info
 
-on boot
-
-# cbd
 service cpboot-daemon /sbin/cbd -d
     class main
     user root
     group radio cache inet misc audio sdcard_rw log
 
-# GPS
 service gpsd /system/bin/gpsd -c /system/etc/gps.xml
     class main
     socket gps seqpacket 0660 gps system
