--- a/rootdir/init.target.rc
+++ b/rootdir/init.target.rc
@@ -44,7 +44,7 @@ service cpboot-daemon /sbin/cbd -d
     group radio cache inet misc audio sdcard_rw log
 
 service gpsd /system/bin/gpsd -c /system/etc/gps.xml
-    class main
+    class late_start
     socket gps seqpacket 0660 gps system
     user gps
     group system inet sdcard_rw
