i9300: init: defer starting gpsd service
This is to ensure gpsd is always started after the Sensorservice
is initialized.

Change-Id: I74154633ffa32f222bab6a9aa7b81e2bcf7f1b96

--- a/rootdir/init.target.rc
+++ b/rootdir/init.target.rc
@@ -49,3 +49,7 @@ service gpsd /system/bin/gpsd -c /system/etc/gps.xml
     user gps
     group system inet sdcard_rw
     seclabel u:r:gpsd:s0
+    disabled
+
+on property:init.svc.bootanim=stopped
+    start gpsd
