--- a/rootdir/init.target.rc
+++ b/rootdir/init.target.rc
@@ -9,7 +9,7 @@ service cpboot-daemon /sbin/cbd -d
     user root
     group radio cache inet misc audio sdcard_rw log
 
-service gpsd /system/bin/gpsd -c /system/etc/gps.xml
+service gpsd /system/bin/sh /system/bin/gps_daemon.sh
     class late_start
     socket gps seqpacket 0660 gps system
     user gps
